10215 lofiadm -la fails after lofiadm -a / lofiadm -d Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Gergő Doma <domag02@gmail.com> Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>